--- a/simple/src/main/res/layout/activity_main.xml
+++ b/simple/src/main/res/layout/activity_main.xml
@@ -10,28 +10,36 @@
         android:layout_height="wrap_content"
         android:onClick="cropPic"
         android:text="从相册选择照片进行裁剪" />
-
+<!--
     <Button
         android:id="@+id/btnOriginal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="cropPic"
         android:text="从相册获取原生的图片" />
-
+-->
     <Button
         android:id="@+id/btnCropFromTake"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="cropPic"
         android:text="从相机拍取照片进行裁剪" />
-
+<!--
     <Button
         android:id="@+id/btnTakeOriginal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="cropPic"
-        android:layout_marginTop="51dp"
         android:text="从相机拍取照片不裁剪" />
+-->
+    <Button
+        android:id="@+id/buttonUpload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="cropPic"
+        android:visibility="invisible"
+        android:text="即刻搜索！" />
+
     <ImageView
         android:id="@+id/imgShow"
         android:layout_width="wrap_content"
