UI and icon changed

--- a/android/src/main/res/values/array.xml
+++ b/android/src/main/res/values/array.xml
@@ -11,7 +11,7 @@
     </string-array>
 
     <string-array name="uploadArray">
-        <item>ShangHai</item>
+        <item>Shanghai</item>
         <item>Los Angeles</item>
     </string-array>
 
