--- a/android/src/main/res/layout/activity_main.xml
+++ b/android/src/main/res/layout/activity_main.xml
@@ -18,42 +18,82 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:id="@+id/ButtonRLayout"
-        android:background="@color/mi">
+        android:background="@drawable/background">
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:weightSum="100" >
 
-    <LinearLayout
+        <LinearLayout
+            android:layout_height="fill_parent"
+            android:layout_width="fill_parent"
+            android:id="@+id/textLayout"
+            android:background="@android:color/transparent"
+            android:layout_weight="35"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/header"/>
+            <EditText
+                android:id="@+id/editTextResult"
+                android:layout_height="fill_parent"
+                android:layout_width="fill_parent"
+                android:inputType="textMultiLine"
+                android:ems="10"
+                android:textColor="@color/transsteelblue"
+                android:textAlignment="center"
+                android:background="@android:color/transparent" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:layout_below="@+id/textLayout"
+            android:background="@color/transmihh"
+            android:layout_weight="65"
+            android:weightSum="2" >
+        <LinearLayout
         android:layout_height="80dp"
         android:layout_width="fill_parent"
         android:gravity = "center_horizontal"
         android:id="@+id/ButtonLayout"
-        android:weightSum="1.0"
+        android:layout_weight="1"
+        android:weightSum="1.2"
         tools:ignore="NotSibling">
         <ImageButton
             android:id="@+id/galleryButton"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:onClick="cropPic"
-            android:layout_marginTop="2dp"
-            android:layout_marginRight="1dp"
             android:textSize="16sp"
-            android:background="@color/mih"
+            android:background="@android:color/transparent"
             android:src="@mipmap/ic_picture"
-            android:elevation="2dp"
-            android:layout_weight="0.5"/>
+            android:layout_weight="0.4"/>
 
         <ImageButton
             android:id="@+id/cameraButton"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:onClick="cropPic"
-            android:layout_marginTop="2dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginRight="2dp"
             android:textSize="16sp"
-            android:background="@color/mihh"
+            android:background="@android:color/transparent"
             android:src="@mipmap/ic_camera"
-            android:elevation="2dp"
-            android:layout_weight="0.5"/>
+            android:layout_weight="0.4"/>
+
+        <ImageButton
+            android:id="@+id/uploadButton"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:textSize="16sp"
+            android:background="@android:color/transparent"
+            android:src="@mipmap/ic_cloud_upload"
+            android:layout_weight="0.4"/>
     </LinearLayout>
     <!--
         <Button
@@ -68,67 +108,42 @@
         android:layout_height="80dp"
         android:layout_width="fill_parent"
         android:gravity = "center_horizontal"
+        android:layout_weight="1"
         android:id="@+id/ButtonLayout2"
-        android:weightSum="1.5">
-        <ImageButton
-            android:id="@+id/uploadButton"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_marginTop="2dp"
-            android:layout_marginRight="1dp"
-            android:textSize="16sp"
-            android:background="@color/mihh"
-            android:src="@mipmap/ic_cloud_upload"
-            android:elevation="2dp"
-            android:layout_weight="0.5"/>
+        android:weightSum="1.2">
+
 
         <ImageButton
             android:id="@+id/desButton"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:onClick="doDescribe"
-            android:layout_marginTop="2dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginRight="2dp"
             android:textSize="16sp"
-            android:background="@color/mih"
+            android:background="@android:color/transparent"
             android:src="@mipmap/ic_pen"
-            android:elevation="2dp"
-            android:layout_weight="0.5"/>
+            android:layout_weight="0.4"/>
 
         <ImageButton
             android:id="@+id/searchButton"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:onClick="sendMessage"
-            android:layout_marginTop="2dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginRight="2dp"
             android:textSize="16sp"
-            android:background="@color/steelblue"
+            android:background="@android:color/transparent"
             android:src="@mipmap/ic_glass"
-            android:elevation="2dp"
-            android:layout_weight="0.5"/>
+            android:layout_weight="0.4"/>
+
+        <ImageButton
+            android:id="@+id/preButton"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:onClick="openSettings"
+            android:textSize="16sp"
+            android:background="@android:color/transparent"
+            android:src="@mipmap/ic_settings"
+            android:layout_weight="0.4"/>
     </LinearLayout>
-    <LinearLayout
-        android:layout_below="@+id/ButtonLayout2"
-        android:layout_height="fill_parent"
-        android:layout_width="fill_parent"
-        android:background="@color/silvergray"
-        android:id="@+id/ImageLayout"
-        android:orientation="vertical">
-        <EditText
-            android:id="@+id/editTextResult"
-            android:layout_width="fill_parent"
-            android:inputType="textMultiLine"
-            android:ems="10"
-            android:layout_height="150dp" />
-    <ImageView
-        android:id="@+id/imgShow"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:scaleType="fitCenter"
-        />
-    </LinearLayout>
+        </LinearLayout>
+        </LinearLayout>
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
