--- a/android/src/main/res/values-v21/colors.xml
+++ b/android/src/main/res/values-v21/colors.xml
@@ -16,6 +16,10 @@
     <color name="mi">#C7EDE9</color>
     <color name="mih">#AFD7ED</color>
     <color name="mihh">#5CA7BA</color>
+    <color name="transmihh">#AA5CA7BA</color>
+    <color name="transmihh2">#FA5CA7BA</color>
+    <color name="transslategray">#AA6D7B8D</color>
+    <color name="transsteelblue">#BB5CB3FF</color>
     <color name="mihhh">#93E0FF</color>
     <color name="pink">#FF425D</color>
 
