--- a/android/src/main/res/xml/preferences.xml
+++ b/android/src/main/res/xml/preferences.xml
@@ -13,10 +13,12 @@
         android:defaultValue="1"
         android:entries="@array/searchArray"
         android:entryValues="@array/searchValues" />
-    <ListPreference     android:title="Imagine Server"
-        android:summary="Select the faster imagine server"
+    <ListPreference     android:title="Image Server"
+        android:summary="Select the faster image server"
         android:key="selectServer"
         android:defaultValue="1"
         android:entries="@array/uploadArray"
         android:entryValues="@array/uploadValues" />
+    <Preference android:title="Clear Cache"
+        android:key="clearCache" />
 </PreferenceScreen>
