--- a/android/src/main/res/layout/activity_webview.xml
+++ b/android/src/main/res/layout/activity_webview.xml
@@ -6,14 +6,23 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="com.silen.android.Webview">
-
-
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="1">
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.92"
+        android:background="@color/mihhh"
+        android:id="@+id/my_toolbar"></android.support.v7.widget.Toolbar>
     <com.silen.android.view.ProgressBarWebView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
+            android:layout_weight="0.08"
             android:id="@+id/webView"
             />
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
