--- a/android/src/main/res/values/styles.xml
+++ b/android/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/mihhh</item>
         <item name="colorPrimaryDark">@color/mihhh</item>
-        <item name="colorAccent">@color/silvergray</item>
+        <item name="colorAccent">@color/steelblue</item>
     </style>
 
     <style name="Theme.AppCompat.Light.NoActionBar.FullScreen" parent="@style/Theme.AppCompat.Light">
@@ -15,13 +15,20 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+    <style name="AppTheme.Webview" parent="Theme.AppCompat.Light.NoActionBar" >
+        <item name="colorPrimary">@color/mihhh</item>
+        <item name="colorPrimaryDark">@color/mihhh</item>
+        <item name="colorAccent">@color/steelblue</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="AppTheme.Settings" parent="@android:style/Theme.Material.Light" >
+    <item name="android:colorPrimary">@color/mihhh</item>
+    <item name="android:colorPrimaryDark">@color/mihhh</item>
+    <item name="android:colorAccent">@color/steelblue</item>
+    </style>
 
 </resources>
