--- a/android/src/main/res/values-v21/colors.xml
+++ b/android/src/main/res/values-v21/colors.xml
@@ -20,6 +20,7 @@
     <color name="transmihh2">#FA5CA7BA</color>
     <color name="transslategray">#AA6D7B8D</color>
     <color name="transsteelblue">#BB5CB3FF</color>
+    <color name="transgray">#99555555</color>
     <color name="mihhh">#93E0FF</color>
     <color name="pink">#FF425D</color>
 
