--- a/android/src/main/res/menu/menu_webview.xml
+++ b/android/src/main/res/menu/menu_webview.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".Webview">
     <item android:id="@+id/action_engine" android:title="@string/action_engine"
         android:orderInCategory="98" app:showAsAction="never" />
-    <item android:id="@+id/action_clearwebcache" android:title="@string/action_clearcache"
+    <item android:id="@+id/action_browser" android:title="@string/action_browser"
         android:orderInCategory="99" app:showAsAction="never" />
+    <item android:id="@+id/action_clearwebcache" android:title="@string/action_clearcache"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
